# convenient_multithreaded_qt_gui

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mtgui.cpp  mtgui.h
